Updated data gen

--- a/data_gen.ipynb
+++ b/data_gen.ipynb
@@ -42,7 +42,7 @@
     "df_2015_10 = pd.read_csv('http://data.insideairbnb.com/united-states/ma/boston/2015-10-03/data/listings.csv.gz', compression='gzip')\n",
     "\n",
     "df_original_listings = pd.concat([df_2020_03, df_2019_18, df_2018_10, df_2017_10, df_2016_09, df_2015_10]).drop_duplicates('id')\n",
-    "print('Len total =', len(df_original_listings))\n"
+    "print('Len total =', len(df_original_listings))"
    ]
   },
   {
@@ -63,8 +63,7 @@
     "df_listings['neighborhood_overview'] = df_listings['neighborhood_overview'].astype(str)\n",
     "df_listings['host_neighbourhood'] = df_listings['host_neighbourhood'].astype(str)\n",
     "df_listings['neighbourhood_cleansed'] = df_listings['neighbourhood_cleansed'].astype(str)\n",
-    "df_listings['notes'] = df_listings['notes'].astype(str)\n",
-    "df_listings['latitude'] = df_listings['latitude'].astype()"
+    "df_listings['notes'] = df_listings['notes'].astype(str)"
    ]
   },
   {
@@ -390,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -443,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -455,255 +454,8 @@
    },
    "outputs": [],
    "source": [
-    "vibetable.to_csv(\"dist/vibetable.csv\", index=False)\n",
-    "vibetable.to_json(\"dist/vibetable.json\", orient='index')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
-    "colab_type": "code",
-    "id": "XR98G0wvtjgK",
-    "outputId": "227787b1-1726-409a-e2d0-0ed6e6dd2000"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>listing_id</th>\n",
-       "      <th>neighborhood_accuracy</th>\n",
-       "      <th>num_reviews</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3781</td>\n",
-       "      <td>64.098361</td>\n",
-       "      <td>61</td>\n",
-       "      <td>0    42.36413\n",
-       "Name: latitude, dtype: float64</td>\n",
-       "      <td>0   -71.02991\n",
-       "Name: longitude, dtype: float64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1042420</td>\n",
-       "      <td>52.250597</td>\n",
-       "      <td>419</td>\n",
-       "      <td>68    42.38362\n",
-       "Name: latitude, dtype: float64</td>\n",
-       "      <td>68   -71.02023\n",
-       "Name: longitude, dtype: float64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3965313</td>\n",
-       "      <td>27.312741</td>\n",
-       "      <td>259</td>\n",
-       "      <td>219    42.38679\n",
-       "Name: latitude, dtype: float64</td>\n",
-       "      <td>219   -71.00302\n",
-       "Name: longitude, dtype: float64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4315428</td>\n",
-       "      <td>56.000000</td>\n",
-       "      <td>3</td>\n",
-       "      <td>244    42.39067\n",
-       "Name: latitude, dtype: float64</td>\n",
-       "      <td>244   -71.00386\n",
-       "Name: longitude, dtype: float64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4315439</td>\n",
-       "      <td>44.692308</td>\n",
-       "      <td>13</td>\n",
-       "      <td>245    42.38921\n",
-       "Name: latitude, dtype: float64</td>\n",
-       "      <td>245   -71.00268\n",
-       "Name: longitude, dtype: float64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9823</th>\n",
-       "      <td>4645486</td>\n",
-       "      <td>0.547619</td>\n",
-       "      <td>42</td>\n",
-       "      <td>682    42.350167\n",
-       "Name: latitude, dtype: float64</td>\n",
-       "      <td>682   -71.057112\n",
-       "Name: longitude, dtype: float64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9824</th>\n",
-       "      <td>9229058</td>\n",
-       "      <td>1.833333</td>\n",
-       "      <td>6</td>\n",
-       "      <td>684    42.350614\n",
-       "Name: latitude, dtype: float64</td>\n",
-       "      <td>684   -71.056625\n",
-       "Name: longitude, dtype: float64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9825</th>\n",
-       "      <td>8733896</td>\n",
-       "      <td>1.162162</td>\n",
-       "      <td>37</td>\n",
-       "      <td>552    42.351448\n",
-       "Name: latitude, dtype: float64</td>\n",
-       "      <td>552   -71.05867\n",
-       "Name: longitude, dtype: float64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9826</th>\n",
-       "      <td>215039</td>\n",
-       "      <td>0.818182</td>\n",
-       "      <td>110</td>\n",
-       "      <td>366    42.351641\n",
-       "Name: latitude, dtype: float64</td>\n",
-       "      <td>366   -71.057128\n",
-       "Name: longitude, dtype: float64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9827</th>\n",
-       "      <td>2752354</td>\n",
-       "      <td>2.333333</td>\n",
-       "      <td>15</td>\n",
-       "      <td>369    42.350397\n",
-       "Name: latitude, dtype: float64</td>\n",
-       "      <td>369   -71.056881\n",
-       "Name: longitude, dtype: float64</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9828 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     listing_id  neighborhood_accuracy num_reviews  \\\n",
-       "0          3781              64.098361          61   \n",
-       "1       1042420              52.250597         419   \n",
-       "2       3965313              27.312741         259   \n",
-       "3       4315428              56.000000           3   \n",
-       "4       4315439              44.692308          13   \n",
-       "...         ...                    ...         ...   \n",
-       "9823    4645486               0.547619          42   \n",
-       "9824    9229058               1.833333           6   \n",
-       "9825    8733896               1.162162          37   \n",
-       "9826     215039               0.818182         110   \n",
-       "9827    2752354               2.333333          15   \n",
-       "\n",
-       "                                                  lat  \\\n",
-       "0        0    42.36413\n",
-       "Name: latitude, dtype: float64   \n",
-       "1       68    42.38362\n",
-       "Name: latitude, dtype: float64   \n",
-       "2      219    42.38679\n",
-       "Name: latitude, dtype: float64   \n",
-       "3      244    42.39067\n",
-       "Name: latitude, dtype: float64   \n",
-       "4      245    42.38921\n",
-       "Name: latitude, dtype: float64   \n",
-       "...                                               ...   \n",
-       "9823  682    42.350167\n",
-       "Name: latitude, dtype: float64   \n",
-       "9824  684    42.350614\n",
-       "Name: latitude, dtype: float64   \n",
-       "9825  552    42.351448\n",
-       "Name: latitude, dtype: float64   \n",
-       "9826  366    42.351641\n",
-       "Name: latitude, dtype: float64   \n",
-       "9827  369    42.350397\n",
-       "Name: latitude, dtype: float64   \n",
-       "\n",
-       "                                                   lon  \n",
-       "0        0   -71.02991\n",
-       "Name: longitude, dtype: float64  \n",
-       "1       68   -71.02023\n",
-       "Name: longitude, dtype: float64  \n",
-       "2      219   -71.00302\n",
-       "Name: longitude, dtype: float64  \n",
-       "3      244   -71.00386\n",
-       "Name: longitude, dtype: float64  \n",
-       "4      245   -71.00268\n",
-       "Name: longitude, dtype: float64  \n",
-       "...                                                ...  \n",
-       "9823  682   -71.057112\n",
-       "Name: longitude, dtype: float64  \n",
-       "9824  684   -71.056625\n",
-       "Name: longitude, dtype: float64  \n",
-       "9825   552   -71.05867\n",
-       "Name: longitude, dtype: float64  \n",
-       "9826  366   -71.057128\n",
-       "Name: longitude, dtype: float64  \n",
-       "9827  369   -71.056881\n",
-       "Name: longitude, dtype: float64  \n",
-       "\n",
-       "[9828 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vibetable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "42.35164080642693"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_listings.loc[df_listings['id'] == 215039]['latitude'].values[0]"
+    "vibetable.to_csv(\"dist/data/vibetable.csv\", index=False)\n",
+    "vibetable.to_json(\"dist/data/vibetable.json\", orient='index')"
    ]
   },
   {
