Refactor vibe factor variable names

--- a/data_gen.ipynb
+++ b/data_gen.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -22,7 +22,15 @@
     "id": "h6kf1rCRR2xK",
     "outputId": "9e55e8d0-603c-469d-d251-68224db07ec1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Len total = 12480\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -39,13 +47,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "B7MOCzKuR5fj"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9684\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0        99.0\n",
+       "1        95.0\n",
+       "2        96.0\n",
+       "3        93.0\n",
+       "4        95.0\n",
+       "        ...  \n",
+       "2552     96.0\n",
+       "2554     99.0\n",
+       "2555     99.0\n",
+       "2556    100.0\n",
+       "2557     87.0\n",
+       "Name: review_scores_rating, Length: 9684, dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_listings = df_original_listings\n",
     "df_listings = df_listings.replace('nan', '', regex=True)\n",
@@ -64,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -74,7 +111,20 @@
     "id": "H5ZijdxcR_fL",
     "outputId": "0f520d45-efa7-40b8-df7b-bee64d1776cf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /Users/marc/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /Users/marc/nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "from itertools import chain\n",
@@ -140,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -150,7 +200,15 @@
     "id": "oYM0cRdEZ9kv",
     "outputId": "8df86a07-27e3-481c-b7c4-8d5249739483"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Len total = 794377\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -167,36 +225,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 419
-    },
-    "colab_type": "code",
-    "id": "-A0FoZNRa1eX",
-    "outputId": "b65c1588-5071-427a-fe8b-59fb2fb7f6f3",
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "df_reviews"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "gvZp5O32cjrS"
    },
    "source": [
-    "# Vibe Vectors"
+    "# Vibe Factor Calculations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculates the neighborhood accuracy statistic for a listing\n",
+    "# Neighborhood accuracy is the dot product between the neighborhood description\n",
+    "# and the reviews left for the place. This metric is greatest when the experience\n",
+    "# of the visitors most matched the vibe that was portrayed by the listing.\n",
+    "\n",
+    "# Neighborhood accuracy is calculated as the sum of the number of adjectives that appear \n",
+    "# in both the neighborhood description and in the reviews for a listing,\n",
+    "# weighted by the frequency by which those adjectives occur in all \n",
+    "# neighborhood descriptions within that neighborhood.\n",
+    "\n",
+    "# calc_neighborhood_accuracy(comments_list) takes in a list of strings as the comments\n",
+    "# for that listing. It returns a scalar neighborhood accuracy score.\n",
+    "def calc_neighborhood_accuracy(comments_list):\n",
+    "  neighborhood_accuracy = 0\n",
+    "\n",
+    "  listing_comments = re.sub('[^\\w\\s]+', '', ' '.join(comments_list)).split()\n",
+    "  comment_freq = Counter(listing_comments)\n",
+    "  comment_words = list(comment_freq.keys())\n",
+    "\n",
+    "  for i in range(len(adjectives)):\n",
+    "    if (adjectives[i] in comment_words):\n",
+    "      neighborhood_accuracy += frequencies[i] * comment_freq[adjectives[i]]\n",
+    "\n",
+    "  rating = df_listings.loc[df_listings['id'] == listing_id]['review_scores_rating']    \n",
+    "  if len(rating) == 0:\n",
+    "    print('listing id:', listing_id, 'rating:', rating)    \n",
+    "  neighborhood_accuracy /= len(comments_list)\n",
+    "\n",
+    "  return neighborhood_accuracy\n",
+    "\n",
+    "# Calculates the mean sentiment of all reviews for a listing.\n",
+    "def calc_happiness(comments_list):\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate all data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -204,78 +292,80 @@
    },
    "outputs": [],
    "source": [
-    "vibedict = []\n",
+    "def gen_data():\n",
+    "  vibedict = []\n",
+    "  for neighborhood in df_listings['neighbourhood_cleansed'].unique():\n",
     "\n",
-    "for neighborhood in df_listings['neighbourhood_cleansed'].unique():\n",
-    "  neighborhood_adjectives = get_neighborhood_adjectives(neighborhood)[1]\n",
-    "  adjectives = list(neighborhood_adjectives)\n",
-    "  frequencies = [neighborhood_adjectives[adjective] for adjective in adjectives]\n",
+    "    # Primary adjectives and their frequencies, used by all listings within to describe this neighborhood\n",
+    "    neighborhood_adjectives = get_neighborhood_adjectives(neighborhood)[1]\n",
+    "    adjectives = list(neighborhood_adjectives)\n",
+    "    frequencies = [neighborhood_adjectives[adjective] for adjective in adjectives]\n",
     "\n",
-    "  # for each listing within this neighborhood\n",
-    "  for listing_id in df_listings.loc[df_listings['neighbourhood_cleansed'] == neighborhood]['id']:\n",
-    "    comments_list = df_reviews.loc[df_reviews['listing_id'] == listing_id]['comments'].tolist()\n",
-    "    if len(comments_list) == 0:\n",
-    "      continue\n",
+    "    # for each listing within this neighborhood\n",
+    "    for listing_id in df_listings.loc[df_listings['neighbourhood_cleansed'] == neighborhood]['id']:\n",
+    "      \n",
+    "      # List of comments for that listing\n",
+    "      comments_list = df_reviews.loc[df_reviews['listing_id'] == listing_id]['comments'].tolist()\n",
+    "      if len(comments_list) == 0:\n",
+    "        continue\n",
     "\n",
-    "    # Neighborhood accuracy is essentially the dot product between the neighborhood description\n",
-    "    # and the reviews left for the place. This indicates the accuracy of the neighborhood\n",
-    "    # description and the vibe that people who stayed felt.\n",
+    "      # Neighborhood accuracy metric (\"Consistency\")\n",
+    "      consistency = calc_neighborhood_accuracy(comments_list)\n",
     "\n",
-    "    # Neighborhood accuracy is the sum of the number of adjectives that appear \n",
-    "    # in both the neighborhood description and in the reviews for a listing,\n",
-    "    # weighted by the frequency by which those adjectives occur in all \n",
-    "    # neighborhood descriptions within that neighborhood. \n",
-    "    neighborhood_accuracy = 0\n",
+    "      # Average rating (\"Enjoyability\")\n",
+    "      enjoyability = df_listings.loc[df_listings['id'] == listing_id]['review_scores_rating'].values[0]\n",
+    "      \n",
+    "      # Number of ratings (\"Popularity\")\n",
+    "      popularity = len(comments_list)\n",
+    "      \n",
+    "      # Add this listing and its metrics to the dictionary\n",
+    "      vibedict.append({'listing_id': listing_id,\n",
+    "                       'lat': df_listings.loc[df_listings['id'] == listing_id]['latitude'].values[0],\n",
+    "                       'lon': df_listings.loc[df_listings['id'] == listing_id]['longitude'].values[0],\n",
+    "                       'enjoyability': enjoyability,\n",
+    "                       'consistency': consistency,\n",
+    "                       'popularity': popularity})\n",
     "\n",
-    "    listing_comments = re.sub('[^\\w\\s]+', '', ' '.join(comments_list)).split()\n",
-    "    comment_freq = Counter(listing_comments)\n",
-    "    comment_words = list(comment_freq.keys())\n",
-    "\n",
-    "    for i in range(len(adjectives)):\n",
-    "      if (adjectives[i] in comment_words):\n",
-    "        neighborhood_accuracy += frequencies[i] * comment_freq[adjectives[i]]\n",
-    "        # neighborhood_accuracy += 1\n",
-    "\n",
-    "    rating = df_listings.loc[df_listings['id'] == listing_id]['review_scores_rating']    \n",
-    "    if len(rating) == 0:\n",
-    "      print('listing id:', listing_id, 'rating:', rating)    \n",
-    "    neighborhood_accuracy /= len(comments_list)\n",
-    "    vibedict.append({'listing_id': listing_id,\n",
-    "                     'lat': df_listings.loc[df_listings['id'] == listing_id]['latitude'].values[0],\n",
-    "                     'lon': df_listings.loc[df_listings['id'] == listing_id]['longitude'].values[0],\n",
-    "                     'rating': df_listings.loc[df_listings['id'] == listing_id]['review_scores_rating'].values[0], \n",
-    "                     'neighborhood_accuracy': neighborhood_accuracy, \n",
-    "                     'num_reviews': len(comments_list)})\n",
-    "\n",
-    "vibetable = pd.DataFrame(columns=['listing_id', 'lat', 'lon', 'rating',  'neighborhood_accuracy', 'num_reviews'])\n",
-    "vibetable = vibetable.append(vibedict, ignore_index=True)"
+    "  vibetable = pd.DataFrame(columns=['listing_id', 'lat', 'lon', 'enjoyability',  'consistency', 'popularity'])\n",
+    "  vibetable = vibetable.append(vibedict, ignore_index=True)\n",
+    "  return vibetable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaled_table = vibetable\n",
-    "\n",
-    "perception_accuracy = vibetable['neighborhood_accuracy']\n",
-    "perception_90 = np.quantile(perception_accuracy, .95)\n",
-    "scaled_table['neighborhood_accuracy'] = vibetable['neighborhood_accuracy'].div(perception_90).clip(upper=1)\n",
-    "\n",
-    "num_reviews = vibetable['num_reviews']\n",
-    "reviews_90 = np.quantile(num_reviews, .95)\n",
-    "scaled_table['num_reviews'] = vibetable['num_reviews'].div(reviews_90).clip(upper=1)\n",
-    "\n",
-    "ratings = vibetable['rating']\n",
-    "ratings_90 = np.quantile(ratings, .95)\n",
-    "scaled_table['rating'] = np.log(vibetable['rating'].div(ratings_90).clip(upper=1))\n",
-    "\n"
+    "vibetable = gen_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "scaled_table = vibetable\n",
+    "\n",
+    "perception_accuracy = vibetable['consistency']\n",
+    "perception_90 = np.quantile(perception_accuracy, .90)\n",
+    "scaled_table['consistency'] = vibetable['consistency'].div(perception_90).clip(upper=1)\n",
+    "\n",
+    "num_reviews = vibetable['popularity']\n",
+    "reviews_90 = np.quantile(num_reviews, .90)\n",
+    "scaled_table['popularity'] = vibetable['popularity'].div(reviews_90).clip(upper=1)\n",
+    "\n",
+    "ratings = vibetable['enjoyability']\n",
+    "ratings_90 = np.quantile(ratings, .90)\n",
+    "scaled_table['enjoyability'] = np.log(vibetable['enjoyability'].div(ratings_90).clip(upper=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -377,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
