move to using spacy for nlp

--- a/data_gen.ipynb
+++ b/data_gen.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -27,37 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Len total = 12480\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df_2020_03 = pd.read_csv('http://data.insideairbnb.com/united-states/ma/boston/2020-03-16/data/listings.csv.gz', compression='gzip')\n",
-    "df_2019_18 = pd.read_csv('http://data.insideairbnb.com/united-states/ma/boston/2019-10-18/data/listings.csv.gz', compression='gzip')\n",
-    "df_2018_10 = pd.read_csv('http://data.insideairbnb.com/united-states/ma/boston/2018-10-11/data/listings.csv.gz', compression='gzip')\n",
-    "df_2017_10 = pd.read_csv('http://data.insideairbnb.com/united-states/ma/boston/2017-10-06/data/listings.csv.gz', compression='gzip')\n",
-    "df_2016_09 = pd.read_csv('http://data.insideairbnb.com/united-states/ma/boston/2016-09-07/data/listings.csv.gz', compression='gzip')\n",
-    "df_2015_10 = pd.read_csv('http://data.insideairbnb.com/united-states/ma/boston/2015-10-03/data/listings.csv.gz', compression='gzip')\n",
-    "\n",
-    "df_original_listings = pd.concat([df_2020_03, df_2019_18, df_2018_10, df_2017_10, df_2016_09, df_2015_10]).drop_duplicates('id')\n",
-    "print('Len total =', len(df_original_listings))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "B7MOCzKuR5fj"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Len total = 12480\n",
       "9684\n"
      ]
     },
@@ -78,12 +48,24 @@
        "Name: review_scores_rating, Length: 9684, dtype: float64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_2020_03 = pd.read_csv('http://data.insideairbnb.com/united-states/ma/boston/2020-03-16/data/listings.csv.gz', compression='gzip')\n",
+    "df_2019_18 = pd.read_csv('http://data.insideairbnb.com/united-states/ma/boston/2019-10-18/data/listings.csv.gz', compression='gzip')\n",
+    "df_2018_10 = pd.read_csv('http://data.insideairbnb.com/united-states/ma/boston/2018-10-11/data/listings.csv.gz', compression='gzip')\n",
+    "df_2017_10 = pd.read_csv('http://data.insideairbnb.com/united-states/ma/boston/2017-10-06/data/listings.csv.gz', compression='gzip')\n",
+    "df_2016_09 = pd.read_csv('http://data.insideairbnb.com/united-states/ma/boston/2016-09-07/data/listings.csv.gz', compression='gzip')\n",
+    "df_2015_10 = pd.read_csv('http://data.insideairbnb.com/united-states/ma/boston/2015-10-03/data/listings.csv.gz', compression='gzip')\n",
+    "\n",
+    "df_original_listings = pd.concat([df_2020_03, df_2019_18, df_2018_10, df_2017_10, df_2016_09, df_2015_10]).drop_duplicates('id')\n",
+    "print('Len total =', len(df_original_listings))\n",
+    "\n",
     "df_listings = df_original_listings\n",
     "df_listings = df_listings.replace('nan', '', regex=True)\n",
     "df_listings['summary'] = df_listings['summary'].astype(str)\n",
@@ -101,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -113,15 +95,12 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to /Users/marc/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     /Users/marc/nltk_data...\n",
-      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-      "[nltk_data]       date!\n"
+      "True\n",
+      "Listings in north end: 347\n",
+      "North end is: Counter({'italian': 184, 'historic': 120, 'good': 90, 'old': 75, 'true': 53, 'entire': 45, 'great': 42, 'narrow': 41, 'fine': 31, 'famous': 29, 'amazing': 27, 'residential': 26, 'american': 26, 'public': 25, 'close': 23, 'european': 19, 'easy': 19, 'short': 18, 'rich': 16, 'fresh': 16, 'accessible': 16, 'authentic': 15, 'beautiful': 15, 'yummy': 14, 'friendly': 13, 'safe': 13, 'perfect': 13, 'favorite': 13, 'notable': 13, 'local': 12, 'delicious': 12, 'vibrant': 12, 'little': 9, 'homemade': 9, 'baked': 9, 'incredible': 9, 'convenient': 9, 'countless': 9, 'square': 8, 'historical': 8, 'young': 8, 'wonderful': 7, 'quiet': 7, 'right': 7, 'lively': 7, 'unbeatable': 7, 'charming': 7, 'unique': 6, 'cozy': 6, 'new': 6, 'sure': 6, 'popular': 6, 'small': 6, 'brief': 6, 'bountiful': 6, 'breathtaking': 6, 'plenty': 6, 'colonial': 6, 'central': 5, 'colorful': 5, 'green': 5, 'walkable': 5, 'main': 5, 'endless': 4, 'ideal': 4, 'modern': 4, 'quaint': 4, 'key': 4, 'beloved': 4, 'nice': 4, 'fun': 4, 'major': 4, 'open': 4, 'early': 4, 'busy': 3, 'outdoor': 3, 'prime': 3, 'detailed': 3, 'overall': 3, 'quick': 3, 'sized': 3, 'culinary': 3, 'a.k.a': 3, 'hungry': 3, 'tiny': 3, 'entertaining': 3, 'north': 3, 'large': 3, 'hot': 3, 'plush': 2, 'distinct': 2, 'apt': 2, 'big': 2, 'quirky': 2, 'able': 2, 'significant': 2, 'direct': 2, 'orange': 2, 'renowned': 2, 'bustling': 2, 'alive': 2, 'striking': 2, 'energetic': 2, 'unmatched': 2, 'humble': 2, 'red': 2, 'delectable': 2, 'high': 2, 'free': 2, 'picturesque': 2, 'long': 2, 'veggie': 2, 'personal': 2, 'flat': 2, 'cherished': 2, 'nearby': 2, 'british': 2, '19th': 2, 'fantastic': 2, 'gorgeous': 2, 'romantic': 2, 'warm': 2, '17th': 1, '18th': 1, 'late': 1, 'international': 1, 'southern': 1, 'lite': 1, 'available': 1, 'cute': 1, 'live': 1, 'pink': 1, 'medical': 1, 'premier': 1, 'indelible': 1, 'particular': 1, 'private': 1, 'hidden': 1, 'cheery': 1, 'plentiful': 1, 'doorstep!.': 1, 'straight': 1, 'happy': 1, 'numerous': 1, 'recent': 1, 'trendy': 1, 'intimate': 1, 'less': 1, 'ficial': 1, 'reasonable': 1, 'exposed': 1, 'wooden': 1, 'comfortable': 1, 'monthly': 1, 'ample': 1, 'contemporary': 1, 'timey': 1, 'electric': 1, 'comparable': 1, 'abundant': 1, 'tasty': 1, 'permanent': 1, 'different': 1, 'jewish': 1, 'pasty': 1, 'furnished': 1, 'distinguished': 1, 'laundry': 1, 'lantern': 1, 'infamous': 1, 'touristy': 1, 'organic': 1, 'urban': 1, 'downtown': 1, 'multiple': 1, 'touristic': 1, 'typical': 1, 'effortless': 1, 'mexican': 1, 'food-': 1, 'cobble': 1, 'hard': 1, 'complete': 1, 'memorable': 1, 'eccentric': 1, 'boisterous': 1, 'quieter': 1, 'functional': 1, 'oversized': 1, 'excellent': 1, 'loud': 1, 'iconic': 1, 'tall': 1, 'mere': 1, 'secured': 1, 'prestigious': 1, 'gay': 1, 'chic': 1, 'interested': 1, 'interesting': 1, 'waterfront': 1, 'prepared': 1, '-christoph': 1, '-theater': 1})\n"
      ]
     }
    ],
@@ -131,40 +110,51 @@
     "import itertools\n",
     "import string\n",
     "import re\n",
+    "import spacy\n",
     "\n",
-    "from nltk.corpus import stopwords\n",
-    "import nltk\n",
-    "nltk.download('stopwords')\n",
-    "nltk.download('averaged_perceptron_tagger')\n",
+    "# Download the natural language dataset for english, if this is the first run\n",
+    "# !python -m spacy download en_core_web_sm\n",
     "\n",
-    "stop_words = set(stopwords.words('english'))\n",
+    "# Load spacy\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
     "\n",
+    "# Add in common words that occurr in all listings, that really don't mean anything useful here\n",
+    "nlp.Defaults.stop_words |= {'many', 'great', 'nearby', 'short', 'major', 'north', 'south', 'east', 'west', 'easy', 'true', 'local', 'public', 'mi', 'several', 'such', 'main', 'other'}\n",
+    "\n",
+    "print('great' in nlp.Defaults.stop_words)\n",
+    "\n",
+    "# Creates a Counter of adjectives used in the \"neighborhood overview\" field of all listings\n",
+    "# within the neighborhood name provided. \n",
     "def get_neighborhood_adjectives(name):\n",
-    "  neigh = df_listings.loc[df_listings['neighbourhood_cleansed'] == name]\n",
+    "  \n",
+    "  # List of the \"neighborhood_overview\" field for all listings for this neighborhood\n",
+    "  overviews = df_listings.loc[df_listings['neighbourhood_cleansed'] == name]['neighborhood_overview']\n",
+    "  \n",
+    "  list_overviews = '  '.join([overview for overview in overviews])\n",
+    "    \n",
+    "  # Combine all overviews into one, and load it into spacy\n",
+    "  text = nlp(list_overviews)\n",
+    "  \n",
+    "  # Get the adjectives\n",
+    "  adjectives = [token.lemma_ for token in text if token.pos_ == \"ADJ\" and not token.is_stop]\n",
+    "  \n",
+    "  # Count the adjectives\n",
+    "  counter = Counter(adjectives)\n",
+    "  \n",
+    "  # Remove pronoun forms\n",
+    "  counter.pop('-PRON-', None)\n",
+    "  \n",
+    "  return (len(overviews), counter)\n",
     "\n",
-    "  overviews = [n.split() for n in neigh['neighborhood_overview']]\n",
-    "  adjectives = []\n",
-    "  for overview in overviews:\n",
-    "    useless_words = ['many', 'great', 'nearby', 'short', 'major', 'north', 'south', 'east', 'west', 'easy', 'true', 'local', 'public', 'mi', 'several', 'such', 'main', 'other']\n",
-    "    text = [word for word in overview if word.lower() not in useless_words]\n",
-    "    text = re.sub('[^\\w\\s]+', '', ' '.join(text))\n",
-    "    tagged = nltk.FreqDist(nltk.pos_tag(text.split()))\n",
-    "    jj = [wt[0] for (wt, _) in tagged.most_common() if wt[1] == 'JJ']\n",
-    "    adjectives.append(jj)\n",
-    "\n",
-    "  flatAdjectives = list(itertools.chain.from_iterable(adjectives))\n",
-    "\n",
-    "  counter = Counter(flatAdjectives)\n",
-    "  return (len(neigh), counter)\n",
-    "\n",
-    "# north_end = get_neighborhood_adjectives('North End')\n",
-    "# print('In north end:', north_end[0])\n",
-    "# print('North end is:', north_end[1])"
+    "  \n",
+    "north_end = get_neighborhood_adjectives('North End')\n",
+    "print('Listings in north end:', north_end[0])\n",
+    "print('North end is:', north_end[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
