small refactoring fix

--- a/data_gen.ipynb
+++ b/data_gen.ipynb
@@ -90,6 +90,7 @@
      "height": 119
     },
     "colab_type": "code",
+    "collapsed": true,
     "id": "H5ZijdxcR_fL",
     "outputId": "0f520d45-efa7-40b8-df7b-bee64d1776cf"
    },
@@ -147,9 +148,9 @@
     "  return (len(overviews), counter)\n",
     "\n",
     "  \n",
-    "north_end = get_neighborhood_adjectives('North End')\n",
-    "print('Listings in north end:', north_end[0])\n",
-    "print('North end is:', north_end[1])"
+    "# north_end = get_neighborhood_adjectives('North End')\n",
+    "# print('Listings in north end:', north_end[0])\n",
+    "# print('North end is:', north_end[1])"
    ]
   },
   {
@@ -230,6 +231,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load spacy\n",
+    "import spacy\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "\n",
     "# Calculates the neighborhood accuracy statistic for a listing\n",
     "# Neighborhood accuracy is the dot product between the neighborhood description\n",
     "# and the reviews left for the place. This metric is greatest when the experience\n",
@@ -242,20 +247,21 @@
     "\n",
     "# calc_neighborhood_accuracy(comments_list) takes in a list of strings as the comments\n",
     "# for that listing. It returns a scalar neighborhood accuracy score.\n",
-    "def calc_neighborhood_accuracy(comments_list):\n",
+    "def calc_neighborhood_accuracy(neighborhood_adjectives, comments_list):\n",
     "  neighborhood_accuracy = 0\n",
     "\n",
+    "  # Comments, excluding punctuation and special characters\n",
     "  listing_comments = re.sub('[^\\w\\s]+', '', ' '.join(comments_list)).split()\n",
+    "  \n",
+    "  # Count up the frequencies of these words\n",
     "  comment_freq = Counter(listing_comments)\n",
     "  comment_words = list(comment_freq.keys())\n",
     "\n",
-    "  for i in range(len(adjectives)):\n",
-    "    if (adjectives[i] in comment_words):\n",
-    "      neighborhood_accuracy += frequencies[i] * comment_freq[adjectives[i]]\n",
+    "  # Dot product time doo doo doo doo doo\n",
+    "  for i in range(len(neighborhood_adjectives)):\n",
+    "    if (neighborhood_adjectives[i] in comment_words):\n",
+    "      neighborhood_accuracy += frequencies[i] * comment_freq[neighborhood_adjectives[i]]\n",
     "\n",
-    "  rating = df_listings.loc[df_listings['id'] == listing_id]['review_scores_rating']    \n",
-    "  if len(rating) == 0:\n",
-    "    print('listing id:', listing_id, 'rating:', rating)    \n",
     "  neighborhood_accuracy /= len(comments_list)\n",
     "\n",
     "  return neighborhood_accuracy\n",
@@ -300,7 +306,7 @@
     "        continue\n",
     "\n",
     "      # Neighborhood accuracy metric (\"Consistency\")\n",
-    "      consistency = calc_neighborhood_accuracy(comments_list)\n",
+    "      consistency = calc_neighborhood_accuracy(adjectives, comments_list)\n",
     "\n",
     "      # Average rating (\"Enjoyability\")\n",
     "      enjoyability = df_listings.loc[df_listings['id'] == listing_id]['review_scores_rating'].values[0]\n",
@@ -379,51 +385,6 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "plt.hist(scaled_table['rating'], bins=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_listings.iloc[1]['id']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_listings.loc[df_listings['id'] == 5506]['review_scores_rating'].values[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(df_reviews)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_reviews\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(df_reviews)"
    ]
   },
   {
